[gd_scene load_steps=21 format=3 uid="uid://bdvqksfo5wu5w"]

[ext_resource type="Script" path="res://scenes/game/levels/001/001_003.gd" id="1_teob5"]
[ext_resource type="Texture2D" uid="uid://bi2vprs6uy2ip" path="res://_art_resources/level01_tileset.png" id="2_4mid5"]
[ext_resource type="PackedScene" uid="uid://b4l5fvx4ijt7b" path="res://scenes/game/characters/collectible.tscn" id="3_fq17l"]
[ext_resource type="Script" path="res://scenes/game/PlayerFollowCamera.gd" id="4_5fru6"]
[ext_resource type="Texture2D" uid="uid://cmoqlp7dxloch" path="res://_art_resources/slime_tileset_01.png" id="5_sl8hj"]
[ext_resource type="AudioStream" uid="uid://cf6nr1yynov87" path="res://assets/audio/001_001_intro.mp3" id="7_w5pxu"]
[ext_resource type="AudioStream" uid="uid://c5dp6t36qkw13" path="res://assets/audio/001_001_loop.mp3" id="8_6nisa"]
[ext_resource type="Texture2D" uid="uid://c3dp3vrr6ubqg" path="res://_art_resources/lampe_plafond.png" id="9_qbwyr"]
[ext_resource type="Texture2D" uid="uid://ouq6km0a8564" path="res://assets/lights/ceiling_light.png" id="10_x4o33"]
[ext_resource type="Script" path="res://scenes/game/levels/001/IA_Panel.gd" id="11_xxyrq"]
[ext_resource type="Texture2D" uid="uid://c0snxwtechr25" path="res://assets/lights/cuve_lighting.png" id="12_r2ryy"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_jkp4m"]
blend_mode = 2

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8kg06"]
texture = ExtResource("2_4mid5")
margins = Vector2i(6, 6)
separation = Vector2i(6, 6)
texture_region_size = Vector2i(90, 48)
0:0/next_alternative_id = 3
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
0:6/0 = 0
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
2:6/0 = 0
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
3:6/0 = 0
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
0:7/0 = 0
0:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:7/0/physics_layer_0/angular_velocity = 0.0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(45, -24, 45, 24, -45, 24, -45, -24)
1:7/0 = 0
1:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:7/0/physics_layer_0/angular_velocity = 0.0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
0:8/0 = 0
0:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:8/0/physics_layer_0/angular_velocity = 0.0
0:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
1:8/0 = 0
1:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:8/0/physics_layer_0/angular_velocity = 0.0
1:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
2:8/0 = 0
2:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:8/0/physics_layer_0/angular_velocity = 0.0
2:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
3:8/0 = 0
3:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:8/0/physics_layer_0/angular_velocity = 0.0
3:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
3:9/0 = 0
3:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:9/0/physics_layer_0/angular_velocity = 0.0
3:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
2:9/0 = 0
2:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:9/0/physics_layer_0/angular_velocity = 0.0
2:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
1:9/0 = 0
1:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:9/0/physics_layer_0/angular_velocity = 0.0
1:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
0:9/0 = 0
0:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:9/0/physics_layer_0/angular_velocity = 0.0
0:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
0:10/0 = 0
0:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:10/0/physics_layer_0/angular_velocity = 0.0
0:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
1:10/0 = 0
1:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:10/0/physics_layer_0/angular_velocity = 0.0
1:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, -24)
1:10/0/physics_layer_0/polygon_1/points = PackedVector2Array(-45, 24, -45, -24, 45, -24, 45, 24)
2:10/0 = 0
2:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:10/0/physics_layer_0/angular_velocity = 0.0
2:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
3:10/0 = 0
3:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:10/0/physics_layer_0/angular_velocity = 0.0
3:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
3:11/0 = 0
3:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:11/0/physics_layer_0/angular_velocity = 0.0
3:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
2:11/0 = 0
2:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:11/0/physics_layer_0/angular_velocity = 0.0
2:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
1:11/0 = 0
1:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:11/0/physics_layer_0/angular_velocity = 0.0
1:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
0:11/0 = 0
0:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:11/0/physics_layer_0/angular_velocity = 0.0
0:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -24, 45, -24, 45, 24, -45, 24)
0:12/0 = 0
0:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:12/0/physics_layer_0/angular_velocity = 0.0
1:12/0 = 0
1:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:12/0/physics_layer_0/angular_velocity = 0.0
2:12/0 = 0
2:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:12/0/physics_layer_0/angular_velocity = 0.0
3:12/0 = 0
3:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:12/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_ncyis"]
tile_size = Vector2i(90, 48)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_8kg06")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b7qhq"]
size = Vector2(88, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i1x3f"]
size = Vector2(133.5, 237)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_t7hhl"]
polygon = PackedVector2Array(-34.3226, 184, -82.0701, 162.062, -247.613, 86, -34.3226, 84)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_1xdoq"]
polygon = PackedVector2Array(-210.839, 112, 167.936, 116, -39.2258, 342)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_vjaut"]
light_mode = 1

[sub_resource type="SystemFont" id="SystemFont_x3cuu"]
font_names = PackedStringArray("Courier New")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_teob5")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
position = Vector2(-734, 0)
color = Color(0.431373, 0.431373, 0.431373, 1)

[node name="TileMap" type="TileMap" parent="."]
material = SubResource("CanvasItemMaterial_jkp4m")
position = Vector2(-18, -14)
tile_set = SubResource("TileSet_ncyis")
format = 2
layer_0/name = "test"
layer_0/tile_data = PackedInt32Array(851971, 1, 11, 851972, 1, 10, 851973, 65537, 10, 851975, 196609, 10, 851976, 1, 10, 851977, 65537, 10, 851978, 1, 10, 851979, 65537, 10, 851980, 131073, 10, 851981, 196609, 10, 851982, 1, 10, 917503, 1, 10, 851968, 65537, 10, 851969, 131073, 10, 851970, 196609, 10, 917499, 1, 0, 917500, 1, 10, 917501, 65537, 10, 917502, 131073, 10, 917495, 1, 0, 917496, 65537, 0, 917497, 131073, 0, 917498, 196609, 0, 786433, 1, 10, 655362, 65537, 10, 589831, 65537, 10, 720898, 1, 10, 589827, 1, 11, 589828, 65537, 0, 589829, 131073, 0, 589824, 1, 10, 589825, 65537, 10, 589826, 1, 0, 655363, 1, 11, 655364, 1, 10, 655365, 65537, 10, 655366, 131073, 10, 720895, 196609, 10, 655360, 65537, 10, 655361, 196609, 10, 786430, 65537, 10, 786431, 1, 10, 720896, 131073, 10, 720897, 131073, 10, 786434, 196609, 10, 786435, 196609, 11, 786436, 65537, 10, 720899, 1, 11, 720900, 131073, 10, 720901, 196609, 10, 720902, 196609, 10, 720903, 1, 10, 720904, 131073, 9, 720905, 65537, 10, 655367, 196609, 10, 655368, 65537, 10, 655369, 131073, 9, 589830, 1, 0, 589832, 1, 10, 589833, 65537, 10, 524294, 65537, 12, 524295, 65537, 1, 524296, 131073, 10, 524297, 196609, 10, 524290, 1, 12, 524291, 65537, 12, 524292, 131073, 12, 524293, 196609, 12, 458754, 65537, 6, 458755, 131073, 6, 458756, 1, 6, 458757, 65537, 6, 589822, 196609, 6, 589823, 196609, 6, 524288, 196609, 6, 524289, 196609, 1, 524286, 65537, 6, 524287, 131073, 6, 458752, 196609, 6, 458753, 1, 6, 458750, 65537, 6, 458751, 131073, 6, 393216, 196609, 6, 393217, 1, 6, 393214, 1, 6, 393215, 65537, 6, 327680, 131073, 6, 327681, 196609, 6, 327682, 131073, 6, 327683, 196609, 6, 327684, 1, 6, 327685, 65537, 6, 393218, 65537, 6, 393219, 1, 6, 393220, 65537, 6, 393221, 131073, 6, 458758, 131073, 6, 458759, 65537, 6, 327677, 1, 6, 327678, 1, 6, 327679, 65537, 6, 262144, 131073, 6, 589820, 1, 6, 589821, 1, 6, 720892, 196609, 6, 720893, 131073, 6, 720894, 131073, 1, 589818, 131073, 6, 589819, 131073, 6, 655356, 131073, 6, 655357, 131073, 6, 655358, 196609, 6, 655359, 65537, 1, 786428, 131073, 6, 786429, 65537, 1, 524284, 131073, 6, 524285, 196609, 6, 458748, 131073, 6, 458749, 131073, 6, 786438, 65537, 10, 786439, 131073, 10, 786437, 1, 10, 786432, 1, 10, 851966, 196609, 10, 851967, 131073, 10, 851964, 1, 1, 851965, 1, 10, 851962, 65537, 6, 851963, 131073, 6, 786426, 1, 6, 786427, 65537, 6, 786424, 1, 6, 786425, 65537, 6, 851959, 1, 7, 851960, 196609, 6, 851961, 1, 6, 786445, 65537, 10, 786446, 131073, 10, 786443, 131073, 10, 786444, 196609, 10, 720907, 65537, 10, 720908, 131073, 10, 720906, 1, 10, 655370, 131073, 10, 589834, 131073, 10, 458760, 65537, 6, 720889, 131073, 6, 720891, 131073, 6, 655353, 131073, 6, 655355, 196609, 6, 589817, 196609, 6, 524281, 65537, 5, 524283, 65537, 3, 458745, 196609, 6, 458747, 65537, 6, 393209, 196609, 6, 393211, 1, 6, 393212, 65537, 6, 327676, 131073, 6, 262145, 196609, 6, 393223, 65537, 6, 458762, 65537, 6, 524298, 131073, 0, 458763, 65537, 6, 458765, 65537, 6, 524299, 1, 0, 524301, 65537, 0, 589835, 196609, 10, 589837, 196609, 10, 655371, 196609, 10, 655373, 65537, 10, 589836, 1, 10, 655372, 1, 10, 458761, 65537, 6, 786440, 196609, 10, 786441, 1, 10, 786442, 65537, 10, 720909, 196609, 10, 720910, 1, 10, 655374, 131073, 10, 589838, 1, 10, 524300, 196609, 0, 524302, 131073, 0, 458764, 65537, 6, 458766, 65537, 6, 327687, 196609, 6, 327688, 196609, 6, 327689, 1, 6, 327690, 65537, 6, 262151, 131073, 6, 262152, 1, 6, 262153, 1, 6, 262154, 65537, 6, 196615, 65537, 6, 196616, 131073, 6, 196617, 196609, 6, 196618, 131073, 6, 196611, 196609, 6, 196612, 131073, 6, 196613, 196609, 6, 196614, 1, 6, 262147, 196609, 6, 262148, 131073, 6, 262149, 196609, 6, 262150, 65537, 6, 327686, 131073, 6, 393222, 196609, 6, 786423, 1, 7, 720887, 1, 7, 720888, 1, 6, 655351, 1, 7, 655352, 65537, 6, 524282, 65537, 5, 458746, 131073, 6, 393210, 131073, 6, 393213, 131073, 6, 327674, 1, 6, 327675, 65537, 6, 589816, 131073, 6, 655354, 196609, 6, 720890, 65537, 6, 262146, 131073, 6, 327673, 1, 6, 196619, 196609, 6, 196621, 1, 6, 65549, 65537, 6, 327692, 196609, 6, 131080, 131073, 6, 65533, 65537, 6, 262136, 196609, 6, 458744, 131073, 6, 65529, 65537, 6, 196603, 196609, 6, 262139, 1, 6, 262138, 1, 6, 65527, 1, 7, 65528, 1, 6, 131064, 65537, 6, 131065, 131073, 6, 131066, 196609, 6, 131067, 196609, 6, 196599, 1, 7, 196600, 1, 6, 196601, 65537, 6, 196602, 131073, 6, 393207, 1, 7, 65532, 1, 6, 65534, 131073, 6, 65535, 1, 6, 131069, 196609, 6, 131070, 1, 6, 131071, 65537, 6, 65536, 131073, 6, 65537, 196609, 6, 262135, 1, 7, 262137, 196609, 6, 262140, 65537, 6, 262141, 131073, 6, 262142, 196609, 6, 262143, 65537, 6, 196606, 1, 6, 196607, 65537, 6, 131072, 131073, 6, 131073, 196609, 6, 196609, 196609, 6, 196610, 131073, 6, 65543, 65537, 6, 65544, 131073, 6, 65545, 1, 6, 65546, 65537, 6, 131074, 1, 6, 131075, 65537, 6, 131076, 131073, 6, 1, 131073, 6, 2, 196609, 6, 3, 1, 6, 4, 65537, 6, 131077, 196609, 6, 131078, 196609, 6, 131079, 65537, 6, 65538, 196609, 6, 65539, 65537, 6, 65540, 131073, 6, 65541, 196609, 6, 5, 131073, 6, 6, 1, 6, 7, 65537, 6, 8, 131073, 6, 9, 1, 6, 65542, 196609, 6, 131081, 196609, 6, 262155, 131073, 6, 10, 65537, 6, 11, 131073, 6, 12, 1, 6, 65547, 131073, 6, 65548, 1, 6, 131082, 1, 6, 131083, 65537, 6, 131084, 131073, 6, 196620, 196609, 6, 262156, 1, 6, 327691, 131073, 6, 196622, 196609, 6, 196623, 65537, 7, 196624, 196609, 6, 393231, 1, 7, 327693, 65537, 6, 327694, 131073, 6, 327695, 65537, 7, 65550, 1, 6, 65551, 65537, 7, 393232, 131073, 6, 393233, 131073, 6, 65552, 131073, 6, 65553, 196609, 6, 262157, 65537, 6, 262158, 131073, 6, 262159, 65537, 7, 131085, 196609, 6, 131086, 131073, 6, 131087, 65537, 7, 131088, 131073, 6, 13, 65537, 6, 14, 131073, 6, 15, 65537, 7, 196604, 131073, 6, 196605, 196609, 6, 0, 65537, 6, 196608, 131073, 6, 131068, 131073, 6, 524279, 1, 7, 524280, 65537, 5, 589815, 1, 7, 131063, 1, 7, 65530, 131073, 6, 65531, 196609, 6, 393208, 131073, 6, 458743, 1, 7, 327671, 1, 7, 327672, 196609, 6, 786447, 65537, 10, 786448, 65537, 6, 786449, 131073, 6, 786450, 196609, 6, 720911, 196609, 10, 720912, 65537, 6, 720913, 131073, 6, 720914, 131073, 6, 655375, 131073, 10, 655376, 65537, 6, 655377, 131073, 6, 655378, 1, 6, 589839, 196609, 10, 589840, 65537, 6, 589841, 1, 6, 589842, 131073, 6, 524303, 1, 10, 524304, 65537, 6, 524305, 1, 6, 524306, 65537, 6, 458767, 65537, 7, 458768, 1, 6, 458769, 1, 6, 458770, 131073, 6, 393234, 1, 6, 327696, 196609, 6, 327697, 196609, 6, 327698, 1, 6, 327699, 196609, 6, 327700, 196609, 6, 327701, 1, 6, 327702, 196609, 6, 262163, 131073, 6, 262164, 1, 6, 262165, 1, 6, 262166, 1, 6, 131091, 1, 6, 131092, 65537, 6, 131093, 65537, 6, 131094, 1, 6, 196627, 131073, 6, 196628, 65537, 6, 196629, 1, 6, 196630, 131073, 6, 393235, 1, 6, 393236, 1, 6, 393237, 1, 6, 393238, 196609, 6, 458771, 196609, 6, 458772, 1, 6, 458773, 1, 6, 458774, 196609, 6, 524307, 196609, 6, 524308, 1, 6, 524309, 196609, 6, 524310, 131073, 6, 131089, 131073, 6, 131090, 65537, 6, 196625, 196609, 6, 196626, 131073, 6, 262160, 65537, 6, 262161, 1, 6, 262162, 131073, 6, 16, 1, 6, 17, 65537, 6, 18, 131073, 6, 19, 196609, 6, 20, 1, 6, 21, 65537, 6, 22, 131073, 6, 23, 131073, 6, 65556, 65537, 6, 65557, 65537, 6, 65558, 131073, 6, 65559, 131073, 6, 131095, 131073, 6, 196631, 131073, 6, 65554, 65537, 6, 65555, 65537, 6, 589844, 196609, 6, 655380, 131073, 6, 655379, 1, 6, 720915, 131073, 6, 589843, 196609, 6, 720916, 131073, 6, 786452, 131073, 6, 786451, 131073, 6, 589846, 131073, 6, 655382, 131073, 6, 720918, 131073, 6, 720917, 196609, 6, 655381, 196609, 6, 589845, 196609, 6, 720919, 131073, 6, 655383, 1, 6, 589847, 1, 6, 524311, 1, 6, 458775, 1, 6, 393239, 131073, 6, 327703, 131073, 6, 262167, 131073, 6, 24, 131073, 6, 65560, 131073, 6, 131096, 131073, 6, 196632, 131073, 6, 262168, 131073, 6, 327704, 131073, 6, 393240, 131073, 6, 458776, 131073, 6, 524312, 131073, 6, 589848, 131073, 6, 655384, 131073, 6, 720920, 131073, 6, 786456, 131073, 6, 786455, 131073, 6, 786454, 131073, 6, 786453, 131073, 6, 851983, 196609, 10, 851984, 65537, 0, 851985, 131073, 0, 851986, 196609, 0, 851987, 1, 0, 851988, 65537, 0, 851989, 131073, 0, 851990, 196609, 0, 851991, 1, 0, 851992, 65537, 0, 851974, 131073, 10, 65526, 1, 7, 196598, 1, 7, 327670, 1, 7, 524278, 1, 7, 786422, 1, 7, 851958, 1, 7, 589814, 1, 7, 262134, 1, 7, 131062, 1, 7, 720886, 1, 7, 393206, 1, 7, 655350, 1, 7, 458742, 1, 7, 131061, 1, 7, 262133, 1, 7, 458741, 1, 7, 655349, 1, 7, 720885, 1, 7, 851957, 1, 7, 786421, 1, 7, 589813, 1, 7, 196597, 1, 7, 65525, 1, 7, 524277, 1, 7, 393205, 1, 7, 327669, 1, 7, -10, 1, 7, 917494, 1, 7, 917493, 1, 7, 917492, 1, 7, 917491, 1, 7, 917490, 1, 7, 917489, 1, 7, 917488, 1, 7, 917487, 1, 7, 851951, 1, 7, 851952, 1, 7, 851953, 1, 7, 851954, 1, 7, 851955, 1, 7, 851956, 1, 7, 786420, 1, 7, 720884, 1, 7, 786419, 1, 7, 786418, 1, 7, 786417, 1, 7, 786416, 1, 7, 786415, 1, 7, 720879, 1, 7, 720880, 1, 7, 720881, 1, 7, 720882, 1, 7, 720883, 1, 7, 655348, 1, 7, 589812, 1, 7, 589811, 1, 7, 589810, 1, 7, 589809, 1, 7, 655345, 1, 7, 655344, 1, 7, 655343, 1, 7, 589807, 1, 7, 589808, 1, 7, 655347, 1, 7, 655346, 1, 7, 524275, 1, 7, 524276, 1, 7, 524274, 1, 7, 524273, 1, 7, 524272, 1, 7, 524271, 1, 7, 458735, 1, 7, 458736, 1, 7, 458737, 1, 7, 458738, 1, 7, 458739, 1, 7, 458740, 1, 7, 393204, 1, 7, 393203, 1, 7, 393202, 1, 7, 393201, 1, 7, 393200, 1, 7, 393199, 1, 7, 327663, 1, 7, 327664, 1, 7, 327665, 1, 7, 327666, 1, 7, 327667, 1, 7, 327668, 1, 7, 262132, 1, 7, 262131, 1, 7, 262130, 1, 7, 262129, 1, 7, 262128, 1, 7, 262127, 1, 7, 196591, 1, 7, 196592, 1, 7, 196593, 1, 7, 196594, 1, 7, 196595, 1, 7, 196596, 1, 7, 131060, 1, 7, 65524, 1, 7, 65519, 1, 7, 131055, 1, 7, 65520, 1, 7, 65521, 1, 7, 65522, 1, 7, 65523, 1, 7, 131059, 1, 7, 131058, 1, 7, 131057, 1, 7, 131056, 1, 7, 393224, 65537, 6, 393225, 131073, 6, 393226, 196609, 6, 393229, 131073, 6, 393230, 196609, 6, 393228, 1, 6, 393227, 65537, 6)

[node name="Collectible" parent="." instance=ExtResource("3_fq17l")]
position = Vector2(-687, 277)
input_pickable = true

[node name="PlayerFollowCamera" type="Camera2D" parent="."]
visible = false
position = Vector2(578, 330)
process_callback = 0
position_smoothing_speed = 15.0
script = ExtResource("4_5fru6")

[node name="Sprite2D4" type="Sprite2D" parent="."]
position = Vector2(-799, 489)
scale = Vector2(1.2, 1.2)
texture = ExtResource("5_sl8hj")
region_enabled = true
region_rect = Rect2(78.248, 946.726, 108.398, 216.953)

[node name="Timer" type="Timer" parent="."]

[node name="IntroMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_w5pxu")

[node name="LoopMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_6nisa")

[node name="player_start" type="CollisionShape2D" parent="."]
position = Vector2(-687, 636)
shape = SubResource("RectangleShape2D_b7qhq")
debug_color = Color(0.941176, 0.4, 0.592157, 1)

[node name="Sprite2D7" type="Sprite2D" parent="."]
position = Vector2(-414, 52)
texture = ExtResource("9_qbwyr")
metadata/_edit_group_ = true

[node name="PointLight2D" type="PointLight2D" parent="Sprite2D7"]
position = Vector2(3.37502, 220.868)
scale = Vector2(17.8281, 23.0843)
shadow_enabled = true
texture = ExtResource("10_x4o33")

[node name="Sprite2D8" type="Sprite2D" parent="."]
position = Vector2(945, 58)
texture = ExtResource("9_qbwyr")
metadata/_edit_group_ = true

[node name="PointLight2D" type="PointLight2D" parent="Sprite2D8"]
light_mask = 2
visibility_layer = 2
position = Vector2(3.37502, 220.868)
scale = Vector2(17.8281, 23.0843)
shadow_enabled = true
texture = ExtResource("10_x4o33")

[node name="Exit" type="Area2D" parent="."]
position = Vector2(-646, -248)
collision_layer = 3
collision_mask = 3
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2(2043, 494)
shape = SubResource("RectangleShape2D_i1x3f")

[node name="DoorLight" type="PointLight2D" parent="Exit"]
position = Vector2(2021, 494)
scale = Vector2(1.06579, 1.41718)
color = Color(0.054902, 1, 0.207843, 1)
energy = 16.0
texture = ExtResource("12_r2ryy")

[node name="Sprite2D4" type="Sprite2D" parent="Exit"]
position = Vector2(1960, 494)
scale = Vector2(1.2, 1.2)
texture = ExtResource("5_sl8hj")
region_enabled = true
region_rect = Rect2(78.248, 946.726, 166.375, 216.953)

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2(-351, 277)
scale = Vector2(0.815789, 0.5)
occluder = SubResource("OccluderPolygon2D_t7hhl")

[node name="LightOccluder2D2" type="LightOccluder2D" parent="."]
position = Vector2(978, 314)
scale = Vector2(0.815789, 0.5)
occluder = SubResource("OccluderPolygon2D_1xdoq")

[node name="IA_Panel" type="Sprite2D" parent="."]
position = Vector2(-62, 106)
scale = Vector2(0.991372, 0.874988)
texture = ExtResource("2_4mid5")
region_enabled = true
region_rect = Rect2(472, 14.5, 283, 172)
script = ExtResource("11_xxyrq")

[node name="AI_Message" type="RichTextLabel" parent="IA_Panel"]
material = SubResource("CanvasItemMaterial_vjaut")
offset_left = -117.01
offset_top = -60.5723
offset_right = 113.99
offset_bottom = 43.4277
theme_override_colors/default_color = Color(0, 1, 0.168627, 1)
theme_override_fonts/normal_font = SubResource("SystemFont_x3cuu")
theme_override_font_sizes/normal_font_size = 19
bbcode_enabled = true
text = "AI_001"

[node name="Douche" type="Sprite2D" parent="."]
position = Vector2(384, 58)
scale = Vector2(0.991372, 0.874988)
texture = ExtResource("2_4mid5")
region_enabled = true
region_rect = Rect2(467.255, 609.77, 326.31, 160.067)

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(387.5, 394)
scale = Vector2(5.96053, 0.294478)
color = Color(0.223529, 0.890196, 0, 1)
texture = ExtResource("12_r2ryy")

[node name="LightDrop" type="PointLight2D" parent="."]
position = Vector2(384, 128)
scale = Vector2(4.03947, 0.0245399)
color = Color(0.223529, 0.890196, 0, 1)
texture = ExtResource("12_r2ryy")

[node name="PointLight2D2" type="PointLight2D" parent="."]
position = Vector2(297, 537)
scale = Vector2(0.394737, 1.46012)
color = Color(0.223529, 0.890196, 0, 1)
texture = ExtResource("12_r2ryy")
